--- a/html_clark/about.html
+++ b/html_clark/about.html
@@ -86,7 +86,22 @@
 			</div>
 		</section>
 
-		<section class="soc-section soc-section-center">
+
+		<section class="video-section">
+			<div class="video-block">
+				<div class="bg">
+					<img src="img/bg-2.jpg" alt="">
+				</div>
+				<div class="icon-wrap">
+					<img src="img/icon-video.svg" alt="">
+				</div>
+				<video poster="" loop playsinline controls class="video-file">
+					<source src="video/fon.mp4" type="video/mp4">
+				</video>
+			</div>
+		</section>
+
+<!--		<section class="soc-section soc-section-center">
 			<div class="content-width">
 				<p class="top">we do</p>
 				<h2>Lorem ipsum <br>dolor sit</h2>
@@ -120,7 +135,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>-->
 
 		<section class="team">
 			<div class="content-width">
@@ -129,10 +144,10 @@
 				<div class="content">
 					<div class="item">
 						<figure>
-							<img src="img/img-4.jpg" alt="">
+							<a href="#team" class="fancybox-img"><img src="img/img-4.jpg" alt=""></a>
 						</figure>
 						<div class="text">
-							<h6>Voornaam Achternaam</h6>
+							<h6><a href="#team" class="fancybox-img">Voornaam Achternaam</a></h6>
 							<p>Functietitel</p>
 							<ul>
 								<li><a href="tel:+31202101724"><img src="img/icon-7-1.svg" alt="">+31202101724</a></li>
@@ -142,10 +157,10 @@
 					</div>
 					<div class="item">
 						<figure>
-							<img src="img/img-4.jpg" alt="">
+							<a href="#team" class="fancybox-img"><img src="img/img-4.jpg" alt=""></a>
 						</figure>
 						<div class="text">
-							<h6>Voornaam Achternaam</h6>
+							<h6><a href="#team" class="fancybox-img">Voornaam Achternaam</a></h6>
 							<p>Functietitel</p>
 							<ul>
 								<li><a href="tel:+31202101724"><img src="img/icon-7-1.svg" alt="">+31202101724</a></li>
@@ -155,10 +170,10 @@
 					</div>
 					<div class="item">
 						<figure>
-							<img src="img/img-4.jpg" alt="">
+							<a href="#team" class="fancybox-img"><img src="img/img-4.jpg" alt=""></a>
 						</figure>
 						<div class="text">
-							<h6>Voornaam Achternaam</h6>
+							<h6><a href="#team" class="fancybox-img">Voornaam Achternaam</a></h6>
 							<p>Functietitel</p>
 							<ul>
 								<li><a href="tel:+31202101724"><img src="img/icon-7-1.svg" alt="">+31202101724</a></li>
@@ -168,10 +183,10 @@
 					</div>
 					<div class="item">
 						<figure>
-							<img src="img/img-4.jpg" alt="">
+							<a href="#team" class="fancybox-img"><img src="img/img-4.jpg" alt=""></a>
 						</figure>
 						<div class="text">
-							<h6>Voornaam Achternaam</h6>
+							<h6><a href="#team" class="fancybox-img">Voornaam Achternaam</a></h6>
 							<p>Functietitel</p>
 							<ul>
 								<li><a href="tel:+31202101724"><img src="img/icon-7-1.svg" alt="">+31202101724</a></li>
@@ -193,6 +208,30 @@
 		</section>
 		
 	</main>
+
+	<div id="team" class="popup-team" style="display: none;">
+		<div class="logo-wrap">
+			<a href="index.html"><img src="img/logo-team.svg" alt=""></a>
+		</div>
+		<div class="content-width">
+			<div class="content">
+				<div class="text">
+					<p class="name">Voornaam Achternaam</p>
+					<p class="info">Functietitel</p>
+					<ul>
+						<li><a href="tel:+31202101724"><img src="img/icon-7-1.svg" alt="">+31202101724</a></li>
+						<li><a href="mailto:hello@aboutmarss.nl"><img src="img/icon-7-2.svg" alt="">mailto:hello@aboutmarss.nl</a></li>
+					</ul>
+				</div>
+				<figure class="mob">
+					<img src="img/img-6.jpg" alt="">
+				</figure>
+			</div>
+		</div>
+		<figure>
+			<img src="img/img-6.jpg" alt="">
+		</figure>
+	</div>
 
   <footer>
     <div class="content-width">
