--- a/html/_index.html
+++ b/html/_index.html
@@ -46,7 +46,7 @@
     <body><h2>Content:</h2><ol>
         <li><a href="index.html">Home</a></li>
         <li><a href="case.html">Case</a></li>
-        <li><a href="instagram.html">Instagram Growth</a></li>
+        <li><a href="formule.html">Formule</a></li>
         <li><a href="about.html">about</a></li>
 
 
