--- a/html/about.html
+++ b/html/about.html
@@ -229,7 +229,18 @@
 			</div>
 		</div>
 		<figure>
-			<img src="img/img-6.jpg" alt="">
+			<!--<img src="img/img-6.jpg" alt="">-->
+			<div class="video-block">
+				<div class="bg">
+					<img src="img/bg-2.jpg" alt="">
+				</div>
+				<div class="icon-wrap">
+					<img src="img/icon-video.svg" alt="">
+				</div>
+				<video poster="" loop playsinline controls class="video-file">
+					<source src="video/fon.mp4" type="video/mp4">
+				</video>
+			</div>
 		</figure>
 	</div>
 
